--- a/Styles/Custom.css
+++ b/Styles/Custom.css
@@ -123,7 +123,7 @@ header::after {
     #aboutMe, #fun, #contact
     {
         height: inherit;
-        padding-top: 0;
+        padding-top: 10%;
     }
     .deviceTopPadding
     {
@@ -139,7 +139,7 @@ header::after {
     #aboutMe, #fun, #contact
     {
         height: inherit;
-        padding-top: 0;
+        padding-top: 10%;
     }
      .deviceTopPadding
     {
